cmss/main/default/objects/Configuration__mdt/Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Generic table for all custom configurations.</description>
    <label>Configuration</label>
    <pluralLabel>Configurations</pluralLabel>
</CustomObject>