cmss/main/default/objects/Configuration__mdt/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <label>Parameter</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>