cmss/main/default/objects/Configuration__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>